--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ layout: boilerplate
 <section class="container section-middle">
     <div class="container-content section-middle-inner">
         <h1 class="title">Error 404!</h1>
-        <p>This page doesn't exist. Please check back later.</p>
+        <p>This page doesn't exist</p>
         <p><a href="/">Go back to home.</a>
     </div>
 </section>
