Nuked navbar menu

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@ permalink: /
 
     {% include nav.html %}
 
-    {% if site.tagline %}
-        <h1 class="cover-title title">{{ site.tagline }}</h1>
-    {% endif %}
+    <h1 class="cover-title title">Announcement</h1>
 
 </header>
 
 <section class="container section-centered">
     <div class="container-content">
-        <h1>Ozon Announcement</h1>
-
-        <p>Hi, +JoshuaFogg here. You might know me from Numix and from Ozon as working on the icon theme and managing the GitHub repos. This is a long one so feel free to scroll to the <strong>TL;DR</strong> at the end.</p>
+        <p>Hi, <a href="https://github.com/Foggalong">Joshua Fogg</a> here. You might know me from Numix and from Ozon as working on the icon theme and managing the GitHub repos. This is a long one so feel free to scroll to the <strong><a href="#tldr">TL;DR</a></strong> at the end.</p>
 
         <blockquote><p>Hey Josh, what's up?</p></blockquote>
 
@@ -45,7 +41,7 @@ permalink: /
 
         <blockquote><p>What will the other Ozon members be doing?</p></blockquote>
 
-        <p>+PaoloRotolo and I are the only two moving straight to Korora. The others have either taken an opportunity to call this a day or work on another project for a while first.</p>
+        <p><a href="https://github.com/PaoloRotolo">Paolo Rotolo</a> and I are the only two moving straight to Korora. The others have either taken an opportunity to call this a day or work on another project for a while first.</p>
 
         <blockquote><p>Can I keep using Ozon or Atom?</p></blockquote>
 
@@ -55,7 +51,8 @@ permalink: /
 
         <hr>
 
-        <p><strong>TL;DR: Ozon is merging into Korora. Atom is being dropped but we'll be working on the theme suite to hopefully make it default in a future release. I'm sure you all have a bazillion questions I've not thought of so ask away and I'll do my best to answer them all.</strong></p></div>
+        <h2 id="tldr">TL;DR</h2>
+        <p><strong>Ozon is merging into Korora. Atom is being dropped but we'll be working on the theme suite to hopefully make it default in a future release. I'm sure you all have a bazillion questions I've not thought of so ask away and I'll do my best to answer them all.</strong></p></div>
     </div>
 </section>
 
