Cleaned up assets

--- a/index.html
+++ b/index.html
@@ -53,15 +53,8 @@ permalink: /
 
         <h2 id="tldr">TL;DR</h2>
         <p><strong>Ozon is merging into Korora. Atom is being dropped but we'll be working on the theme suite to hopefully make it default in a future release. I'm sure you all have a bazillion questions I've not thought of so ask away and I'll do my best to answer them all.</strong></p></div>
-    </div>
-</section>
 
-<section class="container section-centered">
-    <div class="container-content collab">
-        <h2>Ozon is a collaboration between</h2>
-        <a class="collab-item collab-logo" href="http://nitrux.in" target="_blank"><img src="./assets/logo-nitrux.png" alt="Nitrux"></a>
-        <span class="collab-item collab-separator" class="and">&</span>
-        <a class="collab-item collab-logo" href="http://numixproject.org" target="_blank"><img src="./assets/logo-numix.png" alt="Numix"></a>
+        <h1>So long, and thanks for all the fish!<h1>
     </div>
 </section>
 
