Replaced name with username

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ permalink: /
 
 <section class="container section-centered">
     <div class="container-content">
-        <p>Hi, <a href="https://github.com/Foggalong">Joshua Fogg</a> here. You might know me from Numix and from Ozon as working on the icon theme and managing the GitHub repos. This is a long one so feel free to scroll to the <strong><a href="#tldr">TL;DR</a></strong> at the end.</p>
+        <p>Hi, <a href="https://github.com/Foggalong">Foggalong</a> here. You might know me from Numix and from Ozon as working on the icon theme and managing the GitHub repos. This is a long one so feel free to scroll to the <strong><a href="#tldr">TL;DR</a></strong> at the end.</p>
 
-        <blockquote><p>Hey Josh, what's up?</p></blockquote>
+        <blockquote><p>Hey Foggalong, what's up?</p></blockquote>
 
         <p>As of November 1st it will be 5 months since we posted an update and longer still since we pushed any major code changes to Atom. A lot of you have been wondering why this is the case so it's only fair that we update you on the goings on behind the scenes.</p>
 
